<resources>
    <string name="app_name">Ps01</string>
    <string name="data">data</string>
    <string name="bitmap_image">BitmapImage</string>
    <string name="image_path">ImagePath</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="crop">Crop</string>
    <string name="done">Done</string>
    <string name="light">Light</string>
    <string name="color">Color</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="black_n_white">Black n white</string>
    <string name="hue">HUE</string>
    <string name="apply">Apply</string>
    <string name="scale">Scale</string>
    <string name="value_for_sacle">Please put the both value of the scaling size</string>
    <string name="reduce_sacle_value">Please reduce the value of scaling</string>
    <string name="x">X</string>
    <string name="value_for_y">Value for y</string>
    <string name="value_for_x">Value for x</string>
    <string name="images_path">ImagesPath</string>
    <string name="select_two_images">Please select two images</string>
    <string name="image_saved">Image saved</string>
    <string name="merge">Merge</string>
    <string name="select_picture">Select Picture</string>
    <string name="make_video">Make Video</string>
    <string name="select_max_six">Please select max six images</string>
    <string name="stop">Stop</string>
    <string name="save">Save</string>
    <string name="make_your_memory_more_colorful">Make your memory more colorful</string>
</resources>
