<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditImageActivity">

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_save"
            android:gravity="center">

            <Button
                android:id="@+id/button_crop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crop"/>

            <Button
                android:id="@+id/button_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light"/>

            <Button
                android:id="@+id/button_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear_layout"
            android:gravity="center">

            <Button
                android:id="@+id/button_black_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/black_n_white"/>

            <Button
                android:id="@+id/button_hue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hue"/>

            <Button
                android:id="@+id/button_scale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frame_layout"
            android:text="@string/save"/>
    </RelativeLayout>
</ScrollView>
